@@ -1,3 +1,6 @@
+[B]3.2.0[/B]
+- Fixes after thetvdb changes
+
 [B]3.0.16[/B]
 - Fix crash for empty artwork
 
